--- a/styles.css
+++ b/styles.css
@@ -5,15 +5,23 @@ body {
     gap: 20px;
 }
 
-.top {
+.logo {
+    font-size: 24px; 
+    color: #f9faf8;
+}
+
+.top,
+.footer {
     background-color: #1f2937;
     color: white;
+    padding: 0 100px;
 }
 
 .header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0 20px;
 }
 
 ul {
@@ -30,31 +38,90 @@ ul {
     padding: 20px;
 }
 
+.hero-head {
+    padding-right: 10px;
+}
+
 .hero-main {
     font-size: 48px;
     font-weight: 900;
     color: #f9faf8;
 }
 
-.hero-text {
+.hero-text,
+li {
     font-size: 18px;
     color: #e5e7eb;
 }
 
+.hero-img {
+    background-color: #696d72;
+    width: 100%;
+    text-align: center;
+    padding: 80px 0;
+}
+
 .content {
     display: flex;
+    flex-direction: column;
+}
+
+.info-head {
+    align-self: center;
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+}
+
+.info-text {
+    display: flex;
+    justify-content: space-around;
     align-items: center;
-    justify-content: space-evenly;
-    padding: 10px;
+    gap: 5px;
+    padding: 20px 100px;
+    flex-wrap: wrap;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.text {
+    text-align: center;
+    max-width: 150px;
+}
+
+.square {
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    border-width: 3px;
+    border-style: solid;
+    border-color: #3882f6;
+    width: 120px;
+    height: 120px;
+    margin: 10px;
+}
+
+.quote-block {
+    display: flex;
+    flex-direction: column;
+    background-color: #e5e7eb;
+    color: #1f2937;
+    padding: 80px;
 }
 
 .quote {
-    background-color: #e5e7eb;
     font-size: 36px;
-    color: #1f2937;
+    font-weight: lighter;
     font-style: italic;
-    padding: 25px;
-    text-align: center;
+}
+
+.quote-att{
+    text-align: right;
+    font-weight: bold;
+    padding-top: 10px;
 }
 
 .call {
@@ -65,7 +132,20 @@ ul {
     justify-content: space-around;
     align-items: center;
     padding: 20px;
-    margin: 0 25px;
+    margin: 0 150px;
+}
+
+.call-text {
+    display: flex;
+    flex-direction: column;
+}
+
+.call-head {
+    font-weight: bold;
+}
+
+.call-body {
+    font-weight: lighter;
 }
 
 button {
@@ -73,13 +153,19 @@ button {
     background-color: #3882f6;
     padding: 5px 30px;
     border-radius: 8px;
+}
+
+.hero-button {
+   border: 2px;
+   margin-top: 10px;
+}
+
+.call-button {
     border: 2px solid white;
 }
 
 .footer {
     display: flex;
-    background-color: #1f2937;
-    color: white;
     align-items: center;
     justify-content: center;
     padding: 15px;
